<resources>
    <string name="app_name">NewsApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_news">NewsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="comment_hint">Ваш комментарий</string>
    <string name="roll_up">Развернуть</string>
    <string name="user_avatar">Аватар пользователя</string>
    <string name="back_btn">Назад</string>
    <string name="save">Сохранить</string>
    <string name="share">Поделиться</string>
    <string name="subscribe">Подписаться/Отписаться</string>
    <string name="main_news_photo">Главное фото</string>
    <string name="you_sub">Вы подписаны</string>
    <string name="entry_title">Новая запись</string>
    <string name="entry_hint">Текст записи…</string>
    <string name="add_img">Добавить картинку</string>
    <string name="add_music">Добавить музыку</string>
    <string name="add_video">Добавить видео</string>
    <string name="publish">Опубликовать</string>
    <string name="profile_entry">Новая запись</string>
    <string name="profile_delete">Удалить профиль</string>
    <string name="profile_exit">Выйти</string>
    <string name="title_app">ConceptNews</string>
    <string name="login_app">Вход</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Пароль</string>
    <string name="login_btn">Войти в аккаунт</string>
    <string name="registration_title">Создание аккаунта</string>
    <string name="registration_hint_fio">ФИО</string>
    <string name="registration_about">О себе</string>
    <string name="registration_btn">Создать аккаунт</string>
    <string name="welcome_sub_title">у нас надежные новости</string>
    <string name="registration">Регистрация</string>
    <string name="my_subs">Мои подписки</string>
    <string name="sub_to">Подписаться</string>
    <string name="save_posts">Сохранённые посты</string>
    <string name="search_hint">Поиск</string>
    <string name="search_title">Предложенные собщества</string>
</resources>