<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Entry.EntryFragment">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="@null"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/title"
        app:srcCompat="@drawable/ic_left"
        android:contentDescription="@string/back_btn" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:paddingHorizontal="20dp"
        android:text="@string/entry_title"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_marginTop="13dp"
        android:background="#E8E0FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="top"
        android:hint="@string/entry_hint"
        android:padding="20dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/publication"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <ImageButton
        android:id="@+id/add_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_add_img"
        android:background="@null"
        app:layout_constraintTop_toTopOf="@id/publication"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="@id/publication"
        android:contentDescription="@string/add_img" />

    <ImageButton
        android:id="@+id/add_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="@id/publication"
        app:layout_constraintStart_toEndOf="@id/add_img"
        app:layout_constraintTop_toTopOf="@id/publication"
        app:srcCompat="@drawable/ic_add_music"
        android:contentDescription="@string/add_music" />

    <ImageButton
        android:id="@+id/add_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="@id/publication"
        app:layout_constraintStart_toEndOf="@id/add_music"
        app:layout_constraintTop_toTopOf="@id/publication"
        app:srcCompat="@drawable/ic_add_video"
        android:contentDescription="@string/add_video" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/publication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway"
        android:textStyle="bold"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#8468D4"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/publish"/>

</androidx.constraintlayout.widget.ConstraintLayout>