<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="18dp"
    tools:context=".View.Profile.ProfileFragment">

    <ImageView
        android:id="@+id/user_avatar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/background"
        android:layout_marginTop="23dp"
        android:contentDescription="@string/user_avatar"
        android:src="@drawable/ic_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/new_entry"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="15dp"
        android:text="@string/profile_entry"
        android:textAllCaps="false"
        android:textColor="#66239B"
        android:textSize="14sp"
        app:icon="@drawable/ic_edit"
        app:iconPadding="10dp"
        app:iconTint="#66239B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/user_avatar"
        app:layout_constraintBottom_toBottomOf="@id/user_avatar"
        app:strokeColor="#dfd0ec" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Тишкина Алина"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_avatar" />

    <TextView
        android:id="@+id/user_date_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/raleway"
        android:text="Дата регистрации: 12 апреля 2022 год"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_name" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_profile"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:paddingVertical="15dp"
        android:text="@string/profile_delete"
        android:textAllCaps="false"
        android:textColor="#9B2364"
        android:textSize="14sp"
        app:icon="@drawable/ic_delete"
        app:iconPadding="10dp"
        app:iconTint="#9B2364"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_date_register"
        app:strokeColor="#eacbdd" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/exit_profile"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="15dp"
        android:text="@string/profile_exit"
        android:textAllCaps="false"
        android:textColor="#234C9B"
        android:textSize="14sp"
        app:icon="@drawable/ic_exit"
        app:iconTint="#234C9B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/delete_profile"
        app:strokeColor="#c0c2e6" />

</androidx.constraintlayout.widget.ConstraintLayout>