<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingVertical="25dp">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_left"
            android:contentDescription="@string/back_btn" />

        <ImageButton
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:background="@null"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/share"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_save_news_base"
            android:contentDescription="@string/save" />

        <ImageButton
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_upload"
            android:contentDescription="@string/share" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingStart="16dp"
        android:paddingEnd="35dp"
        android:paddingTop="12dp">

        <ImageView
            android:id="@+id/search_avatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/background_search_ico"
            android:contentDescription="@string/user_avatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_avatar" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/search_avatar"
            app:layout_constraintStart_toEndOf="@id/search_avatar"
            app:layout_constraintTop_toTopOf="@id/search_avatar">

            <TextView
                android:id="@+id/company_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Adidas"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/company_subs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:fontFamily="@font/raleway"
                android:text="100500 подписчиков"
                android:textColor="@color/black" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="39dp"
            android:layout_height="44dp"
            android:background="@drawable/background_search_check"
            android:contentDescription="@string/subscribe"
            android:translationY="3dp"
            app:layout_constraintBottom_toBottomOf="@id/search_avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/search_avatar"
            app:tint="#9766D6" />

        <TextView
            android:id="@+id/about_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/raleway"
            android:text="testtesttesttesttesttesttesttesttest testtesttest"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_avatar" />

        <TextView
            android:id="@+id/company_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/raleway"
            android:text="Категория: Бизнес"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/about_company" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/raleway"
            android:text="Дата регистрации: 12 апреля 2022 год"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/company_category" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>