<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:background="@color/white"
    android:paddingBottom="12dp">

    <ImageView
        android:id="@+id/search_avatar"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/background_search_ico"
        android:contentDescription="@string/user_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_avatar" />

    <TextView
        android:id="@+id/post_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:fontFamily="@font/raleway"
        android:text="Бизнесс"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/search_avatar"
        app:layout_constraintStart_toEndOf="@id/search_avatar"
        app:layout_constraintTop_toTopOf="@id/search_avatar" />

    <TextView
        android:id="@+id/post_author_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway"
        android:text="Алеша Попович"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/search_avatar"
        app:layout_constraintEnd_toStartOf="@id/post_date"
        app:layout_constraintStart_toEndOf="@id/post_category"
        app:layout_constraintTop_toTopOf="@id/search_avatar" />

    <TextView
        android:id="@+id/post_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="23dp"
        android:fontFamily="@font/raleway"
        android:text="23 Июня, 19:12"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/search_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/search_avatar" />

    <TextView
        android:id="@+id/post_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingHorizontal="10dp"
        android:text="Виртуальные карты, сервисы помощи и карта в Казахстане: как можно оплатить иностранные сервисы"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_avatar" />

    <TextView
        android:id="@+id/post_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway"
        android:padding="10dp"
        android:text="Не все из них безопасны или официальны."
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/post_title" />

    <ImageView
        android:id="@+id/post_img"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/post_text"
        app:srcCompat="@drawable/example"
        android:contentDescription="@string/main_news_photo" />


    <TextView
        android:id="@+id/post_like"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:drawablePadding="5dp"
        android:fontFamily="@font/raleway"
        android:text="120"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:drawableStartCompat="@drawable/ic_like"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/post_img" />

    <TextView
        android:id="@+id/post_comment"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="12dp"
        android:drawablePadding="5dp"
        android:fontFamily="@font/raleway"
        android:text="120"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:drawableLeftCompat="@drawable/ic_comment"
        app:layout_constraintStart_toEndOf="@id/post_like"
        app:layout_constraintTop_toTopOf="@id/post_like" />

    <TextView
        android:id="@+id/post_views"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="12dp"
        android:drawablePadding="5dp"
        android:fontFamily="@font/raleway"
        android:text="120"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:drawableLeftCompat="@drawable/ic_views"
        app:layout_constraintStart_toEndOf="@id/post_comment"
        app:layout_constraintTop_toTopOf="@id/post_like" />

    <ImageView
        android:id="@+id/post_save"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toEndOf="@id/post_views"
        app:layout_constraintTop_toTopOf="@id/post_like"
        app:srcCompat="@drawable/ic_save_news_base"
        android:contentDescription="@string/save" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#8468D4"
        android:fontFamily="@font/raleway"
        android:text="@string/sub_to"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/post_like" />

</androidx.constraintlayout.widget.ConstraintLayout>